--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,25 @@
 body {
-	
+	background-color: black;
+	text-align: center;
+	font-family: sans-serif;
+}
+
+.navbar-fixed-top {
+	opacity: 0.9;
+}
+
+#title {
+	font-style: "Italianno", cursive;
+}
+
+#heading {
+	padding-top: 150px;
+	color: white;
+	font-size: 48px;
+}
+
+#contact {
+	padding-top: 350px;
+	color: white;
+	font-size: 18px;
 }
