--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 body {
 	font-family: "Merriweather", serif;
-	background-color: black;
+	background-image: url("../background.jpg");
 	text-align: center;
 }
 
