--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,12 @@ body {
 	text-align: center;
 }
 
+#page-wrap {
+	text-align: left;
+     width: 800px;
+     margin: 0 auto;
+}
+
 .navbar-fixed-top {
 	opacity: 0.9;
 }
@@ -31,4 +37,25 @@ body {
 
 .dropdown {
 	color: yellow;
+}
+
+.multiple-borders {
+	height: 500px;
+	width: 1000px;
+  -webkit-box-shadow:
+            0px 0px 0px 2px rgba(0,0,0,0.6),
+                0px 0px 0px 14px #fff,
+                0px 0px 0px 18px rgba(0,0,0,0.2),
+                6px 6px 8px 17px #555;
+     -moz-box-shadow:
+            0px 0px 0px 2px rgba(0,0,0,0.6),
+                0px 0px 0px 14px #fff,
+                0px 0px 0px 18px rgba(0,0,0,0.2),
+                6px 6px 8px 17px #555;
+   
+          box-shadow:
+            0px 0px 0px 2px rgba(0,0,0,0.6),
+                0px 0px 0px 14px #fff,
+                0px 0px 0px 18px rgba(0,0,0,0.2),
+                6px 6px 8px 17px #555;
 }
