--- a/css/style.css
+++ b/css/style.css
@@ -2,10 +2,11 @@ body {
 	font-family: "Merriweather", serif;
 	background-image: url("../background.jpg");
 	text-align: center;
+	padding-top: 80px;
 }
 
 #page-wrap {
-	text-align: left;
+	text-align: center;
      width: 800px;
      margin: 0 auto;
 }
@@ -20,9 +21,9 @@ body {
 }
 
 #heading {
-	padding-top: 150px;
+	padding-bottom: 50px;
 	color: white;
-	font-size: 48px;
+	font-size: 38px;
 }
 
 #contact {
@@ -35,27 +36,44 @@ body {
 	background-image: url("../background.jpg");
 }
 
+
 .dropdown {
 	color: yellow;
 }
 
-.multiple-borders {
-	height: 500px;
-	width: 1000px;
-  -webkit-box-shadow:
-            0px 0px 0px 2px rgba(0,0,0,0.6),
-                0px 0px 0px 14px #fff,
-                0px 0px 0px 18px rgba(0,0,0,0.2),
-                6px 6px 8px 17px #555;
-     -moz-box-shadow:
-            0px 0px 0px 2px rgba(0,0,0,0.6),
-                0px 0px 0px 14px #fff,
-                0px 0px 0px 18px rgba(0,0,0,0.2),
-                6px 6px 8px 17px #555;
-   
-          box-shadow:
-            0px 0px 0px 2px rgba(0,0,0,0.6),
-                0px 0px 0px 14px #fff,
-                0px 0px 0px 18px rgba(0,0,0,0.2),
-                6px 6px 8px 17px #555;
+#logo {
+	float: left;
+}
+
+#intro {
+	padding-left: 5px;
+	float: right;
+	overflow: hidden;
+	color: #fff;
+	font-size: 28px;
+	overflow: none;
+	width:300px;
+}
+
+#wrapper {
+	overflow: auto;
+}
+
+.content {
+	text-align:center;
+}
+
+p {
+	color: #fff;
+	font-size: 20px;
+	text-align: justify;
+}
+
+
+
+ul li {
+	list-style-position: inside;
+	text-align: justify;
+	color: #fff;
+	font-size: 20px;
 }
