--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@ body {
 }
 
 #contact {
-	padding-top: 150px;
+	padding-top: 100px;
 	color: white;
 	font-size: 18px;
 }
@@ -48,6 +48,16 @@ body {
 #intro {
 	padding-left: 5px;
 	float: right;
+	overflow: hidden;
+	color: #fff;
+	font-size: 28px;
+	overflow: none;
+	width:300px;
+}
+
+#closing {
+	padding-left: 5px;
+	float: left;
 	overflow: hidden;
 	color: #fff;
 	font-size: 28px;
