--- a/css/style.css
+++ b/css/style.css
@@ -78,6 +78,19 @@ body {
 	color: #551A8B;
 }
 
+#list {
+	text-align: center;
+	color: #fff;
+	font-size: 20px;
+}
+
+#news {
+	padding-top: 40px;
+	text-align: center;
+	color: #fff;
+	font-size: 20px;
+}
+
 p {
 	color: #fff;
 	font-size: 20px;
