--- a/css/style.css
+++ b/css/style.css
@@ -82,6 +82,13 @@ body {
 	text-align: center;
 	color: #fff;
 	font-size: 20px;
+	padding-bottom: 100px;
+}
+
+#sponsors {
+	text-align: center;
+	color: #fff;
+	font-size: 20px;
 }
 
 #news {
