--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,16 @@ body {
 	color: red;
 }
 
+#intro2 {
+	padding-left: 5px;
+	float: right;
+	overflow: hidden;
+	color: #fff;
+	font-size: 28px;
+	overflow: none;
+	width:300px;
+}
+
 #heading {
 	padding-bottom: 50px;
 	color: white;
@@ -57,7 +67,7 @@ body {
 
 #intro {
 	padding-left: 5px;
-	padding-top: 70px;
+	padding-top: 60px;
 	float: right;
 	overflow: hidden;
 	color: #fff;
